# simple_crawler

./: .gitignore  Dockerfile  README.md  build.sh  check.sh  main.py  pyproject.toml  run.sh  run_py.sh  server.py
search_scrape/: bot_detector.py  cache.py  concurrency.py  ddg_engine.py  extractor.py  fetchers.py  interfaces.py  models.py  pipeline.py  url_utils.py
tests/: test_domain_limiter.py  test_negative_cache.py  test_noise_markdown.py  test_pipeline_dedupe.py  test_security.py  test_url_utils.py
