[project]
name = "simple-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "python-markdownify>=0.12",
  "playwright>=1.45",
]
